--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
   },
   "dependencies": {
     "baseui": "^12.2.0",
-    "dompurify": "^2.4.1",
     "gatsby": "^5.0.0",
     "gatsby-plugin-mailgo": "^0.12.2",
     "gatsby-plugin-manifest": "^5.0.0",
+    "gatsby-plugin-mdx": "^5.0.0",
     "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-sass": "^6.0.0",
     "gatsby-plugin-styletron": "^8.0.0",
     "gatsby-source-filesystem": "^5.0.0",
     "highlight.js": "^11.6.0",
-    "isomorphic-dompurify": "^0.24.0",
     "marked": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^1.4.1",
+    "sanitize-html": "^2.7.3",
     "sass": "^1.56.1",
     "styletron-engine-atomic": "^1.5.0",
     "styletron-react": "^6.1.0",
