--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-mailgo": "^0.12.2",
     "gatsby-plugin-manifest": "^5.0.0",
     "gatsby-plugin-mdx": "^5.0.0",
+    "gatsby-plugin-offline": "^6.0.0",
     "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-sass": "^6.0.0",
     "gatsby-plugin-styletron": "^8.0.0",
